test: тесты для GitHubClient/StackOverflowClient